BUG-1 Removed scrollbars and moved dropdown left in small menu

--- a/src/styles/bootang-app.css
+++ b/src/styles/bootang-app.css
@@ -1,4 +1,4 @@
-/*Empty CSS*/ 
-.test-class {
-	background-color: red;
+.navbar-collapse.bootang-menu-dropdown {
+	overflow-x: hidden;
+	overflow-y: hidden; 
 }
